# g4h

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: README.md
docs/: phase1_smoke_test.md  phase2_training.md  phase3_eval.md  phase4_live_demo.md
notebooks/: 01_smoke_test.ipynb  02_train_colab.ipynb
scripts/: eval_test_split.py  mac_smoke_train.py
server/: Dockerfile  app.py  fetch.py  requirements.txt
server/static/: index.html  main.js  style.css
src/: extract.py  infer.py  model.py  train.py
